# meal_plan_mcp_app

./: .gitignore  README.md  pyproject.toml
src/demo/: Inventory Checker.mov
src/grocery_app/: agent_base.py  agents.py  config.py  demo.py  hello.py  sheet_tools.py  streamlit_app.py  test_app.py  test_sheets.py  weekly_trigger.py
src/grocery_app/custom_agents/: __init__.py  inventory_manager.py  shopping_optimizer.py
src/grocery_app/openai_agents/: __init__.py  ingredient_extractor.py
